--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       <td><button id="equal_button" class="operator_button">=</button></td>
     </tr>
   </table>
-  <p id="author">by <a href="http://codepen.io/InstantMizu/" id="profileLink" class="link">Ted</a></p>
+  <p id="author">by <a href="https://github.com/shintouki" id="profileLink" class="link">Ted</a></p>
 </body>
 
 </html>
